# SP_Cursova_2

./: CMakeLists.txt  Makefile  main.cpp
ninja/: build.ninja  rules.ninja
